# glycin-ng

./: .gitignore  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  deny.toml
benches/: decode.rs  sandbox_overhead.rs
c-api/: Cargo.toml  build.rs  glycin_ng.ld
c-api/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: webp_decode.rs
include/: glycin_ng.h
libglycin-shim/: Cargo.toml  README.md  build.rs
libglycin-shim/src/: cicp.rs  convert.rs  ffi.rs  lib.rs  memformat.rs  ngapi.rs  svg.rs  types.rs
pixbuf-loader/: Cargo.toml  README.md
pixbuf-loader/src/: convert.rs  ffi.rs  lib.rs
pkgconfig/: glycin-ng.pc.in
src/: c_api.rs  encoder.rs  error.rs  image.rs  lib.rs  limits.rs  loader.rs  memory.rs  sniff.rs
src/formats/: bmp.rs  dds.rs  exr.rs  gif.rs  ico.rs  image_rs.rs  jxl.rs  mod.rs  png.rs  pnm.rs  svg.rs  tga.rs  tiff.rs  webp.rs
src/formats/svg/: xinclude.rs
src/metadata/: mod.rs
src/sandbox/: landlock.rs  mod.rs  seccomp.rs
tests/: c_api.rs  concurrent.rs  metadata.rs  multi_format.rs  orientation.rs  png_integration.rs
