[package]
name = "glycin-ng-c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "cdylib build of glycin-ng exporting only the C ABI"
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
name = "glycin_ng"
path = "src/lib.rs"

[dependencies.glycin-ng]
path = ".."
default-features = false
features = [
  "bmp",
  "c-api",
  "dds",
  "decode",
  "encode",
  "exr",
  "gif",
  "ico",
  "jpeg",
  "jxl",
  "landlock",
  "metadata",
  "png",
  "pnm",
  "qoi",
  "seccomp",
  "svg",
  "tga",
  "tiff",
  "webp",
]
