[package]
name = "glycin-ng-libglycin-shim"
version = "0.1.0"
edition = "2024"
description = "libglycin-2.so.0 compat shim that forwards to glycin-ng"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[lib]
name = "glycin_2"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = []
# Pulls in `resvg` (MPL-2.0). Builds of the shim that enable this
# feature produce a binary that combines MIT/Apache-2.0 code with
# MPL-2.0 code; the resulting library is a "Larger Work" in MPL
# terms and the resvg-derived files retain their MPL-2.0 license.
# Distributors who must stay strictly MIT/Apache should leave this
# off and accept that SVG inputs return an "unsupported format"
# error.
svg = ["dep:resvg"]

[dependencies]
libc = "0.2"
resvg = { version = "0.45", default-features = false, optional = true }

[dependencies.glycin-ng]
path = ".."
default-features = false
features = [
    "decode",
    "metadata",
    "landlock",
    "seccomp",
    "png",
    "jpeg",
    "gif",
    "webp",
    "tiff",
    "bmp",
    "ico",
    "tga",
    "qoi",
    "exr",
    "pnm",
    "dds",
    "jxl",
]
